--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
         <script src="assets/js/game/main.js"></script>
         <script src="assets/js/game/rendering.js"></script>
+        <script src="assets/js/game/function.js"></script>
+        <script src="assets/js/game/static.js"></script>
     </head>
     <body>
         <canvas width="480" height="360" style="border: 5px solid black; background-color: lightblue;" id="canvas"></canvas>
