--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
         <script src="assets/js/game/rendering.js"></script>
         <script src="assets/js/game/function.js"></script>
         <script src="assets/js/game/static.js"></script>
+        <script src="assets/js/game/input.js"></script>
+        <script src="assets/js/game/physics2D.js"></script>
     </head>
-    <body>
-        <canvas width="480" height="360" style="border: 5px solid black; background-color: lightblue;" id="canvas"></canvas>
+    <body style="overflow: hidden;">
+        <canvas width="480" height="360" style="border: 5px solid black; background-color: rgb(173, 216, 230);" id="canvas"></canvas>
     </body>
 </html>
